kubernetes/smartcontract-service-deployment.yaml
# kubernetes/smartcontract-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartcontract-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smartcontract-service
  template:
    metadata:
      labels:
        app: smartcontract-service
    spec:
      containers:
      - name: smartcontract-service
        image: pistore/smartcontract-service:latest
        ports:
        - containerPort: 8080
